# diting-radar

./: .gitignore  .graphifyignore  CLAUDE.md  OFFBOARDING.md  ONBOARDING.md  README.md  RUNBOOK.md  STATUS.md  config.example.yaml  pyproject.toml
.omc/state/: hud-state.json  hud-stdin-cache.json
docs/superpowers/plans/: 2026-06-18-diting-dig-lens.md  2026-06-18-diting-migrate-to-macstudio.md  2026-06-18-diting-radar-v1.md  2026-06-18-diting-radar-v2.md  2026-06-18-diting-scrapling-phase1-websearch.md  2026-06-23-project-radar.md
docs/superpowers/specs/: 2026-06-18-baize-radar-design.md  2026-06-18-diting-radar-design.md  2026-06-18-diting-scrapling-deepdig-design.md  2026-06-23-project-radar-design.md
scripts/: deploy.sh  install-launchd.sh  prefetch-vault.py  run-lens.sh  sync-status-to-studio.sh
scripts/launchd/: ai.diting.dig.plist  ai.diting.loops.plist  ai.diting.prefetch.plist  ai.diting.project.plist  ai.diting.research.plist  ai.diting.statussync.plist  ai.diting.trends.plist
src/diting/: __main__.py  config.py  crawl.py  dig.py  llm.py  models.py  novelty.py  project_radar.py  query.py  runner.py  state.py  synthesize.py
src/diting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/diting/deliver/: __init__.py  dig_out.py  feishu.py  obsidian_out.py  project_out.py
src/diting/signal/: dig_topics.py  distill.py  obsidian.py  profile.py  project_signal.py
src/diting/sources/: arxiv.py  (+5 more)
tests/: test_config.py  test_crawl.py  test_deliver.py  test_dig.py  test_dig_out.py  test_dig_topics.py  test_distill.py  test_fetch.py  test_github.py  test_github_releases.py  test_llm.py  test_main.py  test_models.py  test_novelty.py  test_obsidian.py  test_profile.py  test_project_out.py  test_project_radar.py  test_project_signal.py  test_query.py  test_runner.py  test_sources_basic.py  test_state.py  test_state_versions.py  test_synthesize.py  test_websearch.py
