[project]
name = "diting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "pyyaml>=6.0", "trafilatura>=1.12", "lxml_html_clean>=0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
