[project]
name = "diting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "trafilatura>=1.12",
    "lxml_html_clean>=0.1",
    # 必须 scrapling[fetchers]（非裸 scrapling）才装全 Fetcher/StealthyFetcher 依赖：playwright/patchright/
    # browserforge/curl_cffi/msgspec/anyio/protego/apify-fingerprint-datapoints。只装主包则 import Fetcher 即
    # ModuleNotFoundError、搜索抓正文静默失效。隐身抓取(StealthyFetcher 对付反爬站)的浏览器二进制另需一次性
    # `scrapling install`（装 playwright browsers，patchright 复用）——见 RUNBOOK / CLAUDE.md。
    "scrapling[fetchers]>=0.4.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
